# curb-sign-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
examples/: __init__.py  basic_usage.py
src/curb_sign_parser/: __init__.py  parser.py
src/curb_sign_parser/models/: __init__.py  data_models.py
src/curb_sign_parser/processors/: __init__.py  image_processor.py
src/curb_sign_parser/providers/: __init__.py  base.py  claude.py  gpt4.py
src/curb_sign_parser/utils/: __init__.py  exceptions.py  validators.py
tests/: __init__.py  conftest.py  test_image_parser.py  test_llm_models.py  test_providers.py  test_sign_parser.py  test_validators.py
